# md-to-pdf

./: .gitignore  Cargo.toml  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/explanation/: design-tradeoffs.md  index.md  mermaid-rendering.md  rendering-pipeline.md  safety-model.md
docs/how-to/: add-custom-css.md  choose-a-browser.md  debug-rendering.md  include-local-assets.md  index.md  install.md  run-in-ci.md  use-local-mermaid.md
docs/maintainers/: macos-signing.md  release-checklist.md
docs/reference/: cli.md  configuration.md  errors.md  index.md  markdown-support.md
docs/tutorials/: first-pdf.md  index.md  markdown-with-mermaid.md
fixtures/: basic.md  mermaid-flowchart.md
scripts/: install-macos.sh  setup-macos-signing-secrets.sh
src/: browser.rs  document.rs  lib.rs  main.rs  markdown.rs
tests/: cli.rs  pdf.rs
